...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="Player 1"></TextView>

    <EditText
        android:id="@+id/player_one_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:hint="insert name"></EditText>

...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="Player 2"></TextView>

    <EditText
        android:id="@+id/player_two_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:hint="insert name"></EditText>

...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="Player 3"></TextView>

    <EditText
        android:id="@+id/player_three_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:hint="insert name"></EditText>

...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="Player 4"></TextView>

    <EditText
        android:id="@+id/player_four_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:hint="insert name"></EditText>

    <Button
        android:id="@+id/btn_2players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="openPlayingInterface"
        android:text="Start Game"></Button>

</LinearLayout>
