...
                android:textStyle="bold"></TextView>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_aces"
                android:text="Aces"></Button>

            <TextView
                android:id="@+id/player_one_aces"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_fives"
                android:text="Fives"></Button>

            <TextView
                android:id="@+id/player_one_fives"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_smallStraight"
                android:text="Small S"></Button>

            <TextView
                android:id="@+id/player_one_small_straight"
                android:layout_column="1"
                android:gravity="center"
                android:text="0"
...
