<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shaker_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TableLayout
...
                android:textStyle="bold"></TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/current_Player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Current Player"></TextView>

            <TextView
...
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TableRow>

            <ImageView
                android:id="@+id/imageViewDice1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:src="@drawable/dice1" />

            <ImageView
                android:id="@+id/imageViewDice2"
                android:layout_width="80dp"
                android:layout_margin="10dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice2" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageViewDice3"
                android:layout_margin="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice3" />

...
                android:src="@drawable/dice4"></ImageView>
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageViewDice5"
                android:layout_margin="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:src="@drawable/dice5" />
        </TableRow>
...
            android:id="@+id/save"
            android:layout_width="62dp"
            android:layout_height="36dp"
            android:text="Save"></Button>

        <ImageButton
            android:id="@+id/shake_Button"
            style="@android:style/Widget.ImageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:scaleType="fitCenter"
...
